# grabapl

./: .gitattributes  .gitignore  Cargo.toml  README.md  bootstrap.js  include_index_js-node_modules_monaco-editor_esm_vs_base_common_worker_lazy_recursive_-node_modules_mo-84a461.03675b104281d3614ddd.js  include_index_js-node_modules_monaco-editor_esm_vs_base_common_worker_lazy_recursive_-node_modules_mo-84a461.07c93b2c37e8b46073fb.js  include_index_js-node_modules_monaco-editor_esm_vs_base_common_worker_lazy_recursive_-node_modules_mo-84a461.1eb076712e7b4bd85bb9.js  include_index_js-node_modules_monaco-editor_esm_vs_base_common_worker_lazy_recursive_-node_modules_mo-84a461.5cb12dfba488e2ecd50c.js  include_index_js-node_modules_monaco-editor_esm_vs_base_common_worker_lazy_recursive_-node_modules_mo-84a461.5e00b4f8a664aa603ccb.js  include_index_js-node_modules_monaco-editor_esm_vs_base_common_worker_lazy_recursive_-node_modules_mo-84a461.898b6fe4f4798b89cef3.js  include_index_js-node_modules_monaco-editor_esm_vs_base_common_worker_lazy_recursive_-node_modules_mo-84a461.89b90544848bfd8b3fb9.js  include_index_js-node_modules_monaco-editor_esm_vs_base_common_worker_lazy_recursive_-node_modules_mo-84a461.a05590d1e9e2b2cf4f3e.js  include_index_js-node_modules_monaco-editor_esm_vs_base_common_worker_lazy_recursive_-node_modules_mo-84a461.abcded1c7ba7264ff13a.js  include_index_js-node_modules_monaco-editor_esm_vs_base_common_worker_lazy_recursive_-node_modules_mo-84a461.e52d30c0b159526ccdab.js  include_node_modules_monaco-editor_esm_vs_basic-languages_apex_apex_js.5442d8b5adb665effff6.js  include_node_modules_monaco-editor_esm_vs_basic-languages_azcli_azcli_js.98b410ae38a01a898474.js  include_node_modules_monaco-editor_esm_vs_basic-languages_bat_bat_js.97a3c9fcf054fb865393.js  include_node_modules_monaco-editor_esm_vs_basic-languages_bicep_bicep_js.0ef2cabcca0bcd459b27.js  include_node_modules_monaco-editor_esm_vs_basic-languages_cameligo_cameligo_js.20a6673c88445bfd1db0.js  include_node_modules_monaco-editor_esm_vs_basic-languages_coffee_coffee_js.dc7cf653afc12d3d1039.js  include_node_modules_monaco-editor_esm_vs_basic-languages_cpp_cpp_js.d1992ca8cd56a0f0acc2.js  include_node_modules_monaco-editor_esm_vs_basic-languages_csharp_csharp_js.6aa4b3a32191f84d3e6c.js  include_node_modules_monaco-editor_esm_vs_basic-languages_csp_csp_js.393681f9d37b3dcde3fb.js  include_node_modules_monaco-editor_esm_vs_basic-languages_css_css_js.7afda7f53a53f722428f.js  include_node_modules_monaco-editor_esm_vs_basic-languages_cypher_cypher_js.6a900e1f98d23536ecb8.js  include_node_modules_monaco-editor_esm_vs_basic-languages_dart_dart_js.49d7c3079b1c07870252.js  include_node_modules_monaco-editor_esm_vs_basic-languages_dockerfile_dockerfile_js.4d41eb2180df1d62c0a5.js  include_node_modules_monaco-editor_esm_vs_basic-languages_ecl_ecl_js.c776a04a3a44e547d92e.js  include_node_modules_monaco-editor_esm_vs_basic-languages_flow9_flow9_js.3dfe0b0311a5a4cd787b.js  include_node_modules_monaco-editor_esm_vs_basic-languages_fsharp_fsharp_js.b0328442c201b215121b.js  include_node_modules_monaco-editor_esm_vs_basic-languages_go_go_js.574ec38ebf5fb9eb48c7.js  include_node_modules_monaco-editor_esm_vs_basic-languages_graphql_graphql_js.b78f549ebe38f6b7ff76.js  include_node_modules_monaco-editor_esm_vs_basic-languages_hcl_hcl_js.4fc53da6ca7a160f349d.js  include_node_modules_monaco-editor_esm_vs_basic-languages_html_html_js.65f6846a3fecf8c7d8b7.js  include_node_modules_monaco-editor_esm_vs_basic-languages_ini_ini_js.e1c2a383143a732e4342.js  include_node_modules_monaco-editor_esm_vs_basic-languages_java_java_js.129a2946c78b4b14abd9.js  include_node_modules_monaco-editor_esm_vs_basic-languages_kotlin_kotlin_js.023d0234fc2c48adeab3.js  include_node_modules_monaco-editor_esm_vs_basic-languages_less_less_js.c3cc3ec838c5ed0b3ced.js  include_node_modules_monaco-editor_esm_vs_basic-languages_lexon_lexon_js.33c87740c37d67a88dc2.js  (+154 more)
example_clients/online_syntax/online_syntax_ffi/: Cargo.toml
example_clients/template/ffi/: Cargo.toml  README.md
example_clients/template/semantics/: Cargo.toml  README.md
example_clients/typst-plugin/: Cargo.toml  README.md  build_and_copy.sh
example_clients/typst-plugin/src/: lib.rs
example_clients/typst-plugin/typst-project/: main.typ
grabapl/: Cargo.toml  README.md  big-picture-todos.md  design.md  problems-testcases.md  todos.md
grabapl/archive/: README.md  big-picture-todos.md  problems-testcases.md  todos.md
grabapl/benches/: isomorphism_2.rs  isomorphism_find_single_node.rs
grabapl/examples/: isomorphisms_partial.rs  notes.rs
grabapl/src/: graph.rs  lib.rs  main.rs  operation.rs  pattern_match.rs  semantics.rs  serde.rs
grabapl/src/experimental/: edge_order_pattern_match.rs  mod.rs
grabapl/src/graph/: dot.rs  mod.rs  operation.rs  parameter.rs  pattern.rs  semantics.rs
grabapl/src/operation/: builder.rs  builtin.rs  marker.rs  mod.rs  parameterbuilder.rs  query.rs  signature.rs  trace.rs  user_defined.rs
grabapl/src/semantics/: example.rs  example_with_ref.rs
grabapl/tests/: abstract_udop_changes_with_syntax.rs  abstract_value_changes_from_operation.rs  algot_examples.rs  basic_graph_visitation.proptest-regressions  basic_graph_visitation.rs  basic_graph_visitation_ref.proptest-regressions  basic_graph_visitation_ref.rs  bubble_sort.proptest-regressions  bubble_sort.rs  bubble_sort_efficient.proptest-regressions  bubble_sort_efficient.rs  builder_negative_tests.rs  interval.rs  iso_partial_mapping.rs  new_simple_integration.rs  parameters_are_respected.rs  proptest_dot.proptest-regressions  proptest_dot.rs  serde_test.rs  signature.rs  simple_integration.rs  trace_test.rs
syntax/: Cargo.toml  README.md
syntax/src/: custom_syntax.rs  interpreter.rs  lib.rs  main.rs  minirust.rs  semantics.rs
syntax/syntax-examples/: max_heap_remove.gbpl  max_heap_remove_full_syntax.gbpl  simple.gbpl  simple2.gbpl
syntax/tests/: diverge_test.rs  expected_return_signature.rs  max_heap_remove_proptest.proptest-regressions  max_heap_remove_proptest.rs  rename_scope.rs  shape_query_names.rs
(+370 files in other folders)
