[workspace]
resolver = "2"
members = ["grabapl", "example_clients/simple_semantics/simple_semantics", "example_clients/simple_semantics/simple_semantics_ffi", "repl", "syntax", "syntax_macro"]
exclude = ["playground", "wasm-game-of-life"]

[profile.release]
# TODO: remove again?
debug = true

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3