[workspace]
resolver = "2"
members = [
    "grabapl",
    "example_clients/simple_semantics/simple_semantics",
    "example_clients/simple_semantics/simple_semantics_ffi",
    "repl",
    "syntax",
    "syntax_macro",
    "example_clients/online_syntax/online_syntax_ffi",
    "example_clients/template/semantics",
    "example_clients/template/ffi",
]
exclude = ["playground", "wasm-game-of-life"]

[workspace.package]
license = "MIT OR Apache-2.0"
authors = ["Niels Saurer <me@nielssaurer.com>"]

[workspace.dependencies]
grabapl = { path = "grabapl", version = "0.0.0" }
syntax = { path = "syntax", package = "grabapl_syntax", version = "0.0.0" }

[profile.release]
# TODO: remove again?
debug = true

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
