[package]
name = "grabapl"
version = "0.1.0"
edition = "2024"

[lib]
name = "grabapl"

[dependencies]
#petgraph = { git = "https://github.com/petgraph/petgraph.git", rev = "e2b28e59d0c37a8db9037997e84cc483ca94afc9"}
petgraph = { path = "../playground/petgraph" }
derive_more = { version = "2.0.1", features = ["from", "into", "debug", "add", "add_assign"]}
thiserror = "2.0.12"
internment = "0.8.6"
log_crate = { version = "0.4", optional = true, package = "log" }

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.6.0"
rand = "0.9.1"

[features]
default = ["log"]
log = ["dep:log_crate"]

[[bench]]
name = "isomorphism_find_single_node"
harness = false

[[bench]]
name = "isomorphism_2"
harness = false

[[example]]
name = "isomorphisms_partial"
path = "examples/isomorphisms_partial.rs"

