[package]
name = "syntax"
version = "0.1.0"
edition = "2024"

[dependencies]
chumsky = "0.10.1"
ariadne = "0.5.1"
grabapl = { path = "../grabapl" }
serde = { version = "1.0", features = ["derive"] }
derive_more = { version = "0.99", features = ["from"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.6.0"
test-log = "0.2"
