[package]
name = "grabapl_syntax"
version = "0.0.4"
edition = "2024"
license = { workspace = true }
authors = { workspace = true }
description = "Parsing support for grabapl."
categories = ["parser-implementations", "parsing"]
documentation = "https://docs.rs/grabapl_syntax/latest/grabapl_syntax/"

[dependencies]
chumsky = "0.10.1"
ariadne = "0.5.1"
grabapl = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
derive_more = { version = "2.0", features = ["from", "debug"] }
serde_json = "1.0"
thiserror = "2.0"
error-stack = "0.5"

[dev-dependencies]
proptest = "1.6.0"
test-log = "0.2"
