[package]
name = "online_syntax_ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
diplomat = "0.12.0"
diplomat-runtime = { version = "0.12.0", features = ["log"] }
log = "0.4"
grabapl = { path = "../../../grabapl" }
syntax = { path = "../../../syntax", package = "grabapl_syntax", version = "0.0.0" }
error-stack = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
