[package]
name = "grabapl_template_ffi"
version = "0.0.3"
edition = "2024"
license = { workspace = true }
authors = { workspace = true }
description = "FFI bindings for a template grabapl semantics implementation."
categories = []
documentation = "https://docs.rs/grabapl_template_ffi/latest/grabapl_template_ffi/"

[lib]
# important for FFI, especially WASM
crate-type = ["cdylib", "rlib"]

[dependencies]
grabapl = { workspace = true }
syntax = { workspace = true }
# we need to depend on our semantics
semantics = { path = "../semantics", package = "grabapl_template_semantics", version = "0.0.3" }
# for nicer error messages
console_error_panic_hook = "0.1.7"
# if we wanted to call JavaScript functions from Rust
wasm-bindgen = "0.2"
# the main FFI toolkit we use
diplomat = "0.12.0"
diplomat-runtime = { version = "0.12.0", features = ["log"] }
# for logging
log = "0.4"
# for specifying error-stack behavior
error-stack = "0.5"