[package]
name = "grabapl_template_semantics"
version = "0.0.0"
edition = "2024"

[dependencies]
# main basic functionality
grabapl = { path = "../../../grabapl" }
# in case we want to parse a textual representation of user defined operations
syntax = { path = "../../../syntax", package = "grabapl_syntax", version = "0.0.0" }
# in case we want to serialize and deserialize our operations
serde = { version = "1.0", features = ["derive"] }
# for logging
log = "0.4"
# in case we want to support a text representation of our semantics
chumsky = "0.10"