[package]
name = "grabapl_template_semantics"
version = "0.0.1"
edition = "2024"
license = { workspace = true }
authors = { workspace = true }
description = "A template grabapl semantics implementation."
categories = []
documentation = "https://docs.rs/grabapl_template_semantics/latest/grabapl_template_semantics/"

[dependencies]
# main basic functionality
grabapl = { workspace = true }
# in case we want to parse a textual representation of user defined operations
syntax = { workspace = true }
# in case we want to serialize and deserialize our operations
serde = { version = "1.0", features = ["derive"] }
# for logging
log = "0.4"
# in case we want to support a text representation of our semantics
chumsky = "0.10"